--- a/create.html
+++ b/create.html
@@ -7,5 +7,22 @@
 </head>
 <body>
     <h1>Create Flashcard</h1>
-    <form action="{{ url_for('create_flashcard') }}" method="post">
-        <label for="question">Question:</label
+    <form method="post">
+        <label for="question">Question:</label><br>
+        <input type="text" id="question" name="question"><br>
+        <label for="answer">Answer:</label><br>
+        <input type="text" id="answer" name="answer"><br>
+
+        <!-- Dropdown menu for selecting a deck -->
+        <label for="deck">Select a Deck:</label><br>
+        <select id="deck" name="deck_id">
+            <option value="">None</option> <!-- Option for creating a flashcard without a deck -->
+            {% for deck in decks %}
+                <option value="{{ deck.id }}">{{ deck.name }}</option>
+            {% endfor %}
+        </select><br>
+
+        <button type="submit">Create Flashcard</button>
+    </form>
+</body>
+</html>
